--- a/app/src/main/res/layout/rcv_chapter_verses_item.xml
+++ b/app/src/main/res/layout/rcv_chapter_verses_item.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:layout_marginBottom="48dp"
+    >
 
     <LinearLayout
         android:id="@+id/item_layout"
