--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.SaralBhagavadGitaHindi" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <!-- Base application theme -->
+    <style name="Base.Theme.SaralBhagavadGitaHindi" parent="Theme.Material3.DayNight.NoActionBar"/>
+
+    <style name="Theme.SaralBhagavadGitaHindi" parent="Base.Theme.SaralBhagavadGitaHindi">
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorSecondary">@color/color_secondary</item>
     </style>
 </resources>
