--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.SaralBhagavadGitaHindi" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+    <style name="Base.Theme.SaralBhagavadGitaHindi" parent="Theme.Material3.DayNight.NoActionBar"/>
 
-    <style name="Theme.SaralBhagavadGitaHindi" parent="Base.Theme.SaralBhagavadGitaHindi" />
+    <style name="Theme.SaralBhagavadGitaHindi" parent="Base.Theme.SaralBhagavadGitaHindi">
+        <item name="colorPrimary">@color/color_primary</item>
+        <item name="colorSecondary">@color/color_secondary</item>
+    </style>
 </resources>
