--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -35,7 +35,7 @@
                 tools:text="@string/app_name"
                 android:fontFamily="@font/inknut_antiqua_regular"
                 android:textColor="@color/white"
-                android:textAlignment="center"
+                android:layout_marginEnd="16dp"
                 />
         </androidx.appcompat.widget.Toolbar>
 
