--- a/app/src/main/res/layout/vp_verse_layout_item.xml
+++ b/app/src/main/res/layout/vp_verse_layout_item.xml
@@ -118,38 +118,19 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTranslationText" />
-        <TextView
-            android:id="@+id/tvPurportText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="16dp"
-            android:text="@string/text_purport_hindi"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:fontFamily="@font/gotu_regular"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvTranslation"
-            android:visibility="gone"
-            />
 
-        <TextView
-            android:id="@+id/tvPurport"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginVertical="16dp"
-            android:ellipsize="end"
-            android:text="@string/sample_text_purport_hindi"
-            android:textAlignment="center"
-            android:fontFamily="@font/gotu_regular"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvPurportText"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="gone"
-            />
+<!--        <com.google.android.gms.ads.AdView-->
+<!--            android:id="@+id/adView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_centerInParent="true"-->
+<!--            app:adSize="BANNER"-->
+<!--            app:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/tvTranslation"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.5"-->
+<!--            app:layout_constraintStart_toStartOf="parent" />-->
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
