--- a/app/src/main/res/layout/rcv_chapter_verses_item.xml
+++ b/app/src/main/res/layout/rcv_chapter_verses_item.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="48dp"
     >
 
     <LinearLayout
         android:id="@+id/item_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginBottom="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +25,14 @@
             android:textSize="16sp"
             android:textAlignment="center"
             android:fontFamily="@font/inknut_antiqua_bold"
+            android:layout_marginVertical="24dp"
             />
+
+        <View
+            android:id="@+id/hrline"
+            android:layout_width="match_parent"
+            android:layout_height="0.1dp"
+            android:background="@color/color_primary" />
 
     </LinearLayout>
 
