--- a/app/src/main/res/layout/activity_verse.xml
+++ b/app/src/main/res/layout/activity_verse.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.verse.VerseActivity"
-    android:background="@color/color_background">
+    tools:context=".view.verse.VerseActivity">
 
     <include
         android:id="@+id/app_bar_layout"
