--- a/app/src/main/res/layout/fragment_chapter_verses.xml
+++ b/app/src/main/res/layout/fragment_chapter_verses.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.main.ChapterVersesFragment"
-    android:background="@color/color_background"
+    android:background="@android:color/transparent"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
