--- a/BhagavadGitaApp/app/src/main/res/layout/rcv_chapters_item.xml
+++ b/BhagavadGitaApp/app/src/main/res/layout/rcv_chapters_item.xml
@@ -46,6 +46,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/inknut_antiqua_regular"
             android:textSize="12sp"
+            android:textColor="@color/gray"
             app:layout_constraintStart_toStartOf="@id/tv_chapter_name"
             app:layout_constraintTop_toBottomOf="@id/tv_chapter_name"
             tools:text="@string/chapter_meaning_text" />
