--- a/BhagavadGitaApp/app/src/main/res/layout/rcv_verses_item.xml
+++ b/BhagavadGitaApp/app/src/main/res/layout/rcv_verses_item.xml
@@ -13,8 +13,9 @@
         android:background="?attr/selectableItemBackground"
         android:fontFamily="@font/inknut_antiqua_bold"
         android:padding="8dp"
+        android:justificationMode="inter_word"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:textStyle="bold"
         tools:text="@string/verse_text" />
 
