--- a/BhagavadGitaApp/app/src/main/res/menu/fragment_verse_details.xml
+++ b/BhagavadGitaApp/app/src/main/res/menu/fragment_verse_details.xml
@@ -1,10 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
     <item
         android:id="@+id/action_search_verse"
-        android:title="Search verse"
+        android:title="@string/search_verse"
         android:icon="@drawable/ic_search"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         />
+<!--    <item-->
+<!--        android:id="@+id/action_add_note"-->
+<!--        android:title="@string/add_note"-->
+<!--        android:icon="@drawable/ic_edit"-->
+<!--        app:showAsAction="ifRoom" />-->
+<!--    <item-->
+<!--        android:id="@+id/action_like"-->
+<!--        android:icon="@drawable/ic_contribute"-->
+<!--        android:title="@string/add_like"-->
+<!--        app:showAsAction="ifRoom" />-->
 </menu>
