--- a/BhagavadGitaApp/app/src/main/res/layout/fragment_verse_details.xml
+++ b/BhagavadGitaApp/app/src/main/res/layout/fragment_verse_details.xml
@@ -154,12 +154,12 @@
             android:id="@+id/fab_next_verse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:backgroundTint="@color/white"
+            android:layout_margin="12dp"
+            android:backgroundTint="@color/invertDarkColor"
             android:contentDescription="@string/previous_verse_text"
             android:elevation="6dp"
             android:src="@drawable/ic_chapter_next"
-            app:fabCustomSize="44dp"
+            app:fabCustomSize="56dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:shapeAppearanceOverlay="@style/RoundedShape" />
@@ -168,12 +168,12 @@
             android:id="@+id/fab_prev_verse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:backgroundTint="@color/white"
+            android:layout_margin="12dp"
+            android:backgroundTint="@color/invertDarkColor"
             android:contentDescription="@string/next_verse_text"
             android:elevation="6dp"
             android:src="@drawable/ic_chapter_prev"
-            app:fabCustomSize="44dp"
+            app:fabCustomSize="56dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:shapeAppearanceOverlay="@style/RoundedShape" />
