--- a/BhagavadGitaApp/app/src/main/res/layout/fragment_chapter_details_bottom_sheet_dialog.xml
+++ b/BhagavadGitaApp/app/src/main/res/layout/fragment_chapter_details_bottom_sheet_dialog.xml
@@ -24,6 +24,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_close"
+            app:tint="@color/gray_secondary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_chapter_number_text" />
 
@@ -35,6 +36,7 @@
             android:textSize="12sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/gray_primary"
             tools:text="@string/chapter_number_text" />
 
         <TextView
@@ -45,6 +47,7 @@
             android:gravity="center_vertical"
             android:textSize="18sp"
             android:textStyle="bold"
+            android:textColor="@color/gray_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_chapter_number_text"
             app:layout_constraintTop_toBottomOf="@id/tv_chapter_number_text"
@@ -56,7 +59,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/inknut_antiqua_regular"
             android:textSize="16sp"
-            android:textColor="@color/gray"
+            android:textColor="@color/gray_secondary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_chapter_number_text"
             app:layout_constraintTop_toBottomOf="@id/tv_chapter_name"
@@ -68,6 +71,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/inknut_antiqua_regular"
             android:textSize="12sp"
+            android:textColor="@color/gray_tertiary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_chapter_number_text"
             app:layout_constraintTop_toBottomOf="@id/tv_chapter_name_meaning"
