--- a/BhagavadGitaApp/app/src/main/res/layout/rcv_chapters_item.xml
+++ b/BhagavadGitaApp/app/src/main/res/layout/rcv_chapters_item.xml
@@ -17,6 +17,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:fontFamily="@font/inknut_antiqua_bold"
+            android:textColor="@color/gray_primary"
             android:gravity="center"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -34,6 +35,7 @@
             android:gravity="center_vertical"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:textColor="@color/gray_primary"
             app:layout_constraintBottom_toBottomOf="@id/tv_chapter_number_text"
             app:layout_constraintEnd_toStartOf="@id/iv_details"
             app:layout_constraintStart_toEndOf="@id/tv_chapter_number_text"
@@ -46,16 +48,17 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/inknut_antiqua_regular"
             android:textSize="12sp"
-            android:textColor="@color/gray"
+            android:textColor="@color/gray_secondary"
             app:layout_constraintStart_toStartOf="@id/tv_chapter_name"
             app:layout_constraintTop_toBottomOf="@id/tv_chapter_name"
             tools:text="@string/chapter_meaning_text" />
 
         <ImageView
             android:id="@+id/iv_details"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/ic_questionmark"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/ic_info"
+            app:tint="@color/gray_secondary"
             app:layout_constraintBottom_toBottomOf="@id/tv_chapter_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/tv_chapter_name" />
