--- a/BhagavadGitaApp/app/src/main/res/layout/rcv_searched_verses_item.xml
+++ b/BhagavadGitaApp/app/src/main/res/layout/rcv_searched_verses_item.xml
@@ -11,10 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/selectableItemBackground"
-        android:fontFamily="@font/inknut_antiqua_bold"
+        android:fontFamily="@font/inknut_antiqua_regular"
         android:padding="8dp"
         android:textAlignment="center"
         android:textSize="12sp"
+        android:textColor="@color/gray_secondary"
         tools:text="@string/verse_text" />
 
     <View
