--- a/BhagavadGitaApp/app/src/main/res/layout/fragment_search_verse.xml
+++ b/BhagavadGitaApp/app/src/main/res/layout/fragment_search_verse.xml
@@ -9,9 +9,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="0dp"
-        android:fitsSystemWindows="true">
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
