--- a/BhagavadGitaApp/app/src/main/res/layout/fragment_search_verse.xml
+++ b/BhagavadGitaApp/app/src/main/res/layout/fragment_search_verse.xml
@@ -9,7 +9,12 @@
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/color_secondary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -18,15 +23,19 @@
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"
             app:navigationContentDescription="@string/toolbar_back_button_content_description"
-            app:navigationIcon="?homeAsUpIndicator">
+            app:navigationIcon="?homeAsUpIndicator"
+            app:navigationIconTint="@color/on_primary">
 
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/searchView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:queryHint="@string/search_label"
                 app:iconifiedByDefault="false"
                 app:searchIcon="@null"
+                android:singleLine="true"
                 />
+
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
