--- a/BhagavadGitaApp/app/src/main/res/values-night/colors.xml
+++ b/BhagavadGitaApp/app/src/main/res/values-night/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#2b2d42</color>
-    <color name="color_secondary">#2b2d42</color>
-    <color name="color_background">#e7ecef</color>
+    <color name="color_primary">#FF8A3D</color>
+    <color name="color_secondary">#FF8A3D</color>
+    <color name="color_background">#121212</color>
 
     <color name="gray_primary">#DEFFFFFF</color>
     <color name="gray_secondary">#99FFFFFF</color>
@@ -15,4 +15,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="gray">#808080</color>
+
+    <color name="on_primary">#FFFFFF</color>
+
 </resources>
