--- a/BhagavadGitaApp/app/src/main/res/values/colors.xml
+++ b/BhagavadGitaApp/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#2b2d42</color>
-    <color name="color_secondary">#2b2d42</color>
+    <color name="color_primary">#ffa266</color>
+    <color name="color_secondary">#ffa266</color>
     <color name="color_background">#e7ecef</color>
 
     <color name="gray_primary">#2b2d42</color>
@@ -15,4 +15,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="gray">#808080</color>
+
+    <color name="on_primary">#1A1A1A</color>
+
 </resources>
